--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
 * {
   margin: 0;
   padding: 0;
+  /*outline: 1px solid green;*/
 }
 
 html, body { height: 100%; }
@@ -31,8 +32,6 @@ a:hover   { color: #000; text-decoration: underline; }
   padding: 0px;
   margin: 0 auto;
   zoom: 1;
-  margin-left: 20px;
-  margin-right: 20px;
 }
 
 
@@ -60,6 +59,16 @@ a:hover   { color: #000; text-decoration: underline; }
   line-height: 48px;
   position: relative;
   z-index: 1;
+  margin-left: 20px;
+}
+
+@media(max-width: 400px){
+  .site-title,
+  .site-title:hover,
+  .site-title:visited {
+    margin-left: 0px;
+    font-size: 18px;
+  }
 }
 
 .site-title img {
@@ -71,8 +80,14 @@ a:hover   { color: #000; text-decoration: underline; }
 .site-nav {
   float: right;
   line-height: 48px;
+  margin-right: 20px;
 }
 
+@media(max-width: 400px) {
+  .site-nav {
+    margin-right: 0px;
+  }
+}
 .site-nav .menu-icon { display: none; }
 
 .site-nav .page-link {
